--- a/index.html
+++ b/index.html
@@ -168,22 +168,22 @@
                     window.open(
                         "mailto:eslam.a.gomaa@te.eg?subject=" +
                             subject +
-                            "&body=Dear Eslam,%0d%0a%0d%0aKindly find the Daily Report for " +
+                            "&body=Dear Eslam,%0A%0AKindly find the Daily Report for " +
                             store +
                             " Store" +
-                            "%0d%0a%0d%0a" +
+                            "%0A%0A" +
                             trx +
-                            "%0d%0a" +
+                            "%0A" +
                             attach +
-                            "%0d%0a" +
+                            "%0A" +
                             contracts +
-                            "%0d%0a" +
+                            "%0A" +
                             cash +
-                            "%0d%0a" +
+                            "%0A" +
                             down +
-                            "%0d%0a%0d%0a" +
+                            "%0A%0A" +
                             notes +
-                            "%0d%0a%0d%0aThanks."
+                            "%0A%0AThanks."
                     );
                 }
             }
