--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width,initial-scale=0.80,maximum-scale=1,user-scalable=no" />
+        <meta name="viewport" content="width=device-width,initial-scale=0.85,maximum-scale=1,user-scalable=no" />
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <title>Daily Report</title>
         <link rel="icon" href="icon.png" />
@@ -118,7 +118,7 @@
                 <textarea id="notes" placeholder="Type Here .."></textarea>
                 <br />
                 <br />
-                <button type="button" onclick="Send()">Send</button>
+                <button type="button" onclick="Send()">Generate</button>
                 <br />
                 <br />
             </form>
