--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
                             <option value="البلينا - فيوتشر">البلينا - فيوتشر</option>
                             <option value="البلينا - تليكوم">البلينا - تليكوم</option>
                             <option value="دار السلام">دار السلام</option>
+                            <option value="طهطا - المصريه جروب">طهطا - المصريه جروب</option>
+                            <option value="طهطا - فيوتشر">طهطا - فيوتشر</option>
+                            <option value="المراغه - المصريه جروب">المراغه - المصريه جروب</option>
+                            <option value="المراغه - فيوتشر">المراغه - فيوتشر</option>
+                            <option value="طما - فيوتشر">طما - فيوتشر</option>
+                            <option value="طما - كافريج">طما - كافريج</option>
+                            <option value="مجمع المحاكم">مجمع المحاكم</option>
+                            <option value="شارع 15">شارع 15</option>
+                            <option value="المخبز الآلي">المخبز الآلي</option>
+                            <option value="جهينه">جهينه</option>
+                            <option value="برديس">برديس</option>
                         </select>
                     </td>
                 </tr>
