--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
             <br />
         </form>
         <script>
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", () => {
+                    navigator.serviceWorker
+                        .register("service-worker.js")
+                        .then((registration) => {
+                            console.log("Service Worker registered with scope:", registration.scope);
+                        })
+                        .catch((error) => {
+                            console.log("Service Worker registration failed:", error);
+                        });
+                });
+            }
             function GetDate() {
                 document.getElementById("day").value = new Date().getDate();
                 document.getElementById("month").value = new Date().getMonth() + 1;
