--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="apple-touch-icon" href="icon.png" />
         <link rel="stylesheet" href="style.css" />
         <link rel="manifest" href="manifest.webmanifest" />
+        <script async src="service-worker.js"></script>
+        <script async src="pulltorefresh.js"></script>
     </head>
     <body onload="GetDate()">
         <form>
@@ -136,18 +138,6 @@
             <br />
         </form>
         <script>
-            if ("serviceWorker" in navigator) {
-                window.addEventListener("load", () => {
-                    navigator.serviceWorker
-                        .register("service-worker.js")
-                        .then((registration) => {
-                            console.log("Service Worker registered with scope:", registration.scope);
-                        })
-                        .catch((error) => {
-                            console.log("Service Worker registration failed:", error);
-                        });
-                });
-            }
             function GetDate() {
                 document.getElementById("day").value = new Date().getDate();
                 document.getElementById("month").value = new Date().getMonth() + 1;
