--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="apple-touch-icon" href="icon.png" />
         <link rel="stylesheet" href="style.css" />
         <link rel="manifest" href="manifest.json" />
-        <script src="service-worker.js" defer></script>
+        <script src="main.js"></script>
     </head>
     <body onload="GetDate()">
         <form>
