--- a/pub/index.html
+++ b/pub/index.html
@@ -13,8 +13,8 @@
         <link rel="manifest" href="manifest.json" />
         <script src="script.js"></script>
 		<!-- Include Firebase SDK -->
-		<script src="https://www.gstatic.com/firebasejs/9.x/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/9.x/firebase-messaging.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-messaging.js"></script>
 		<script type="module">
 			import { initializeApp } from 'firebase/app';
 			import { getMessaging, getToken, onMessage } from 'firebase/messaging';
